--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "vite": "^2.6.4"
   },
   "dependencies": {
-    "@rescript/react": "^0.10.3"
+    "@rescript/react": "^0.10.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "rescript-hash": "^1.5.0"
   }
 }
